# rag-prod-gcp-backend

./: .gitignore  main.py  pyproject.toml
app/: auth.py  main.py  rag.py  storage.py
scripts/: google-signin-test.html
tests/: test_main.py
