[project]
name = "rag-prod-gcp-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.1",
    "google-auth>=2.55.1",
    "google-cloud-storage>=3.12.0",
    "jupyterlab>=4.6.1",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.2.6",
    "langsmith>=0.9.3",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
